コラム記事の詳細化とフローページの画像入れ替え、スタイル調整

--- a/column/oxiclean-drum.html
+++ b/column/oxiclean-drum.html
@@ -65,28 +65,72 @@
       </section>
 
       <article class="column-article container" data-animate="fade-up">
-        <h2>準備するものと注意点</h2>
         <p>
-          酸素系漂白剤のオキシクリーンは洗濯槽の汚れを浮かせる効果が高い一方で、使用量を誤ると泡が大量に発生し排水エラーになる恐れがあります。取扱説明書を確認し、必ずゴム手袋と換気を行いながら使用しましょう。
+          酸素系漂白剤「オキシクリーン」は、ドラム式洗濯機のニオイやカビを落とす定番アイテムです。ただし濃度や放置時間を誤ると泡が排水できなくなったり、センサーがエラーを検知することもあります。ここではプロ視点でまとめた安全な手順と、仕上がりを高めるコツをご紹介します。
         </p>
 
-        <h2>オキシ漬けの正しい手順</h2>
+        <h2>事前準備と環境づくり</h2>
+        <p>
+          作業を始める前に取扱説明書で「酸素系漂白剤の使用可否」「槽洗浄コースの有無」「最大水位」を確認しましょう。槽内に衣類が残っていないか、フィルターが詰まっていないかもチェックしておくとトラブルを防げます。
+        </p>
+        <h3>用意するもの</h3>
+        <ul>
+          <li>オキシクリーン（粉末タイプ）</li>
+          <li>40℃前後のお湯を準備できる給湯器または電気ケトル</li>
+          <li>ゴム手袋・保護メガネ・マスク</li>
+          <li>計量スプーン、混ぜるためのスプーンや泡立て器</li>
+          <li>柔らかいクロスやスポンジ、使い古しの歯ブラシ</li>
+        </ul>
+        <h3>安全のためのワンポイント</h3>
+        <ul class="checklist">
+          <li>窓や換気扇を使って十分に換気する</li>
+          <li>お湯の温度は40〜45℃を上限にし、熱すぎないよう注意する</li>
+          <li>粉末は小さな容器で完全に溶かしてから槽内へ入れる</li>
+          <li>作業中は子どもやペットが近づかない環境を整える</li>
+        </ul>
+
+        <h2>手順ガイド（所要時間：約4時間）</h2>
         <ol>
-          <li>ドラム内の洗濯物を全て取り出し、糸くずフィルターも外しておく</li>
-          <li>40℃前後のぬるま湯を高水位までためる（「槽洗浄コース」が便利）</li>
-          <li>オキシクリーンを規定量溶かし、3〜5分回して全体に行き渡らせる</li>
-          <li>一時停止し、3時間ほど放置して汚れを浮かせる</li>
-          <li>再び運転し、洗浄コースを最後まで実施する</li>
+          <li>
+            <strong>槽内を空にする</strong>：洗濯物はもちろん、糸くずフィルターや乾燥フィルターも取り外し、軽く水洗いしておきます。
+          </li>
+          <li>
+            <strong>お湯をためる</strong>：40℃前後のお湯をドラムの7〜8分目まで張り、槽洗浄コースがあれば選択。なければ標準コースで回しても問題ありません。
+          </li>
+          <li>
+            <strong>オキシクリーンを投入</strong>：お湯5Lに対して大さじ1（約15g）が目安です。3〜5分ほど回して溶かしたら一時停止にします。
+          </li>
+          <li>
+            <strong>浸け置き</strong>：フタを閉めたまま3時間ほど放置。途中で浮いてきたゴミを網やキッチンペーパーですくうと、仕上がりが大幅に向上します。
+          </li>
+          <li>
+            <strong>仕上げ洗浄</strong>：再び運転し、槽洗浄コース（または標準コース）を最後まで実行。最後に「水だけですすぎ1回」を追加すると洗剤残りを防げます。
+          </li>
         </ol>
 
-        <h2>仕上げに忘れず行いたい3つのケア</h2>
-        <ul>
-          <li>洗剤投入口やゴムパッキンの周りを柔らかい布で拭き上げる</li>
-          <li>排水フィルターに溜まった汚れをブラシで除去する</li>
-          <li>ドアを開けたままにし、内部をしっかり乾燥させる</li>
+        <h2>仕上げのケアとニオイ戻り防止策</h2>
+        <ul class="checklist">
+          <li>洗剤投入口やゴムパッキンをクロスで拭き、水分を残さない</li>
+          <li>排水フィルターのゴミを取り除き、水洗い後によく乾かす</li>
+          <li>作業後は扉を開けたまま半日ほど乾燥させ、湿気を逃がす</li>
         </ul>
         <p>
-          これらを定期的に行うことでドラム式特有のニオイやカビを大幅に抑えることができます。頑固な汚れが気になる場合は、プロの分解クリーニングを組み合わせると効果的です。
+          定期的に実施するなら1カ月に1回程度が目安。梅雨〜夏場など気温が高い季節は、2週間に1度のペースにするとニオイ戻りを抑えられます。
+        </p>
+
+        <h2>よくあるトラブルと対処法</h2>
+        <dl>
+          <dt>泡が排水されずエラー表示になった</dt>
+          <dd>オキシクリーンの量が多かった可能性があります。電源を切って泡を洗面器などで取り除き、ぬるま湯を少量追加してから再度排水してください。</dd>
+          <dt>庫内に白い粉が残ってしまった</dt>
+          <dd>溶け残った粉末が固まったものです。40℃以上のお湯で再度すすぎを行い、柔らかい歯ブラシでこすり落とします。</dd>
+          <dt>ヒートポンプ式でも使える？</dt>
+          <dd>多くのモデルで使用できますが、水位が低い機種では浸け置きが難しい場合があります。説明書で酸素系漂白剤の使用可否を必ず確認しましょう。</dd>
+        </dl>
+
+        <h2>プロに任せた方がよいケース</h2>
+        <p>
+          オキシクリーンで洗浄してもニオイが数日で戻るときは、内部のファンや乾燥ダクトまで汚れが広がっているサインです。家族にアレルギー体質の方がいる場合、購入から5年以上経過している場合は、一度プロの分解クリーニングでリセットすると安心です。
         </p>
 
         <div class="column-article__back">
